# ctfs

./: .gitignore  README.md  pyproject.toml
ecsc2025/caller/: code.c
ecsc2025/certle/: solution.py
ecsc2025/easy-mfa/: crack-admin-token.py  crack-otp.py  randcrack.py
ecsc2025/enter-the-matrix/: exploit.py  output.txt
ecsc2025/files-storage/: exploit.py
ecsc2025/files-storage/src/: app.py  requirements.txt
ecsc2025/flag-guardian/: README.md
ecsc2025/get-my-post/: README.md  exploit-server.py  exploit.py
ecsc2025/get-my-post/src/: app.py  flag.txt  internal.py
ecsc2025/kumbukumbu/: abc.py  code.js  crack.js  index-16e46f93a89fcba0997498932000ed7be51e03df.html
ecsc2025/maze-runner/src/: app.py  runner.py
ecsc2025/myschool/: README.md  exploit.py  find_id.py  test.py
ecsc2025/photo-archiver/: README.md  code.py
ecsc2025/quine/: alt.py  bytecode.txt  exploit.py  quine
ecsc2025/re-crackme/: exploit.py
ecsc2025/shactr/: exploit.py  patched_flag.bmp.enc
ecsc2025/sneaky-train/: st  st.i64
ecsc2025/warmup-pwn/: README.md  exploit.py
ecsc2025/warmup-pwn/src/: Dockerfile  sandbox.cfg  server  server.c
ecsc2025/yaw/: exploit.py
ecsc2025/yaw/src/: app.py
sfi/competing_standards/: test.py
sfi/dumps/: intersection  test.py
sfi/fasl/: elegant-1.fasl  elegant.fasl
sfi/heavyweight/: heavyweight_model.pth  model_blueprint.py  test.py  test2.py
sfi/png/data/: words.txt
sfi/roundcube/poczta/: index.html  mail.php
sfi/roundcube/poczta/index_files/: larry.css
sfi/seq/: cracker.py  more.py  secret.7z
sfi/sound/: image.py  more.py  sound.py
(+94 files in other folders)
