[project]
name = "ctfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "fpylll>=0.6.4",
    "jwt>=1.4.0",
    "mersenne-twister-predictor>=0.0.4",
    "pwntools>=4.14.1",
    "pyjwt>=2.10.1",
    "randcrack>=0.2.0",
    "websockets>=15.0.1",
    "z3-solver>=4.15.1.0",
]
